comments_alex (#105)
Rework of Consent and Crtdl records, restructuring of Flux, diverse test,code improvements and bug fixes 
---------

Co-authored-by: Alexander Kiel <alexanderkiel@gmx.net>
Co-authored-by: Julian Gründner <juliangruendner@googlemail.com>